[package]
name = "rust_azure_service_bus"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex-amqp = "0.5.0-b.6"
log = "0.4.14"
pretty_env_logger = "0.4.0"
webpki = "0.21.0"
ntex-amqp-codec = "0.6.2"
futures = "0.3.16"

[dependencies.rustls]
version = "0.19.1"
features = ["dangerous_configuration"]

[dependencies.ntex]
version = "0.4.0-b.1"
features = ["rustls"]

[dependencies.tokio]
version = "1.9.0"
features = ["full"]